Fixed the horixontal scroll
Fixed the horizontal scroll caused by the motd area

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -9563,7 +9563,8 @@ textarea#filecont {
   margin-bottom: 7px;
   max-width: auto;
   display: none;
-  width:100%
+  width:100%;
+  overflow-x: hidden;
 }
 .motdLeftContainer{
   display: flex;
